k8s/user-app/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-web-service
  namespace: user-app
spec:
  selector:
    app: user-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
